--- a/src/index.css
+++ b/src/index.css
@@ -103,3 +103,23 @@ img{
 
 
 /*==================MEDIA QUERIES (DISPOSITIVOS MEDIOS -TABLETS)*/
+
+@media screen and (max-width:1024px){
+    .container{
+        width: var(--container-width-md);
+    }
+    section {
+        margin-top: 6rem;
+    }
+}
+
+/*==================MEDIA QUERIES (DISPOSITIVOS PEQUEÑOS -TELEFONOS)*/
+
+@media screen and (max-width:600px){
+    .container{
+        width: var(--container-width-sm);
+    }
+    section>h2 {
+        margin-top: 2rem;
+    }
+}
